--- a/src/app/Components/heading/headingcss.css
+++ b/src/app/Components/heading/headingcss.css
@@ -2,31 +2,34 @@
 
 
 .Defheichone {
-    font-family: var(--ftb);
+    font-family: "f4";
     color: var(--color1);
-    width: 100vw;
+    width: 100%;
     text-align: center;
     font-size: 5em;
-    height: 115px;
+    
+    float: left;
+    height: auto;
 }
 
 
 .Defheichtwo {
-    font-family: var(--ft);
-    font-weight: 900;
+    font-family: "f3";
     color: var(--color2);
-    width: 100vw;
+    width: 100%;
     text-align: center;
     font-size: 2.5em;
-    height: 115px;
+    
+    float: left;
+    height: auto;
 }
 
 .Defheichtre {
-    font-family: var(--ft);
-    font-weight: 100;
+    font-family: "f2";
     color: var(--color3);
-    width: 100vw;
+    float: left;
     text-align: center;
     font-size: 1em;
-    height: 115px;
+    height: auto;
+  
 }
