--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,13 +2,13 @@
 
 * {
     margin: 0;
-    /* font-family: "Yekan Bakh FaNum"; */
 }
 
 
 body {
     background: linear-gradient(to bottom, #3F3F75, #0D0736);
     background-repeat: no-repeat;
+    height: 100vh;
 }
 
 a {
@@ -22,7 +22,7 @@ nav {
     width: 100%;
     height: 100px;
     display: flex;
-    align-content: center;
+
     align-items: center;
     float: left;
 }
@@ -30,50 +30,67 @@ nav {
 nav ul {
     float: right;
     direction: rtl;
-    width: 60%;
+    width: auto;
     justify-content: space-around;
     display: flex;
     align-items: center;
-    margin-left: 40%;
+
 }
 
+a {
+    font-family: "f2" !important;
+}
 
 nav li {
     display: inline !important;
     float: left;
-    font-family: var(--ft);
-    font-weight: 100;
 
 }
 
 main {
     float: left;
+    width: 100%;
 }
 
-.Defheichone {
-    margin-top: 32px;
+@media only screen and (min-width: 800px) {
+
+  
+
+    nav {
+        width: 70%;
+        margin-left: 15%;
+        justify-content: flex-end;
+        border-bottom: 1.5px solid rgba(187, 187, 187, 0.3);
+    }
+
+
+
+    .logocase {
+        width: auto;
+    }
+
+    nav ul {
+        width: 100%;
+    }
+
+    .sfgnxwn7x8fw7 {
+        width: 15%;
+        display: none !important;
+        justify-content: center;
+    }
+
 }
 
-.Defheichtwo {
-    margin-top: 32px;
-}
+@media only screen and (max-width: 800px) {
 
-.Defheichtre {
-    /* background: red; */
-    width: 50vw !important;
-    margin-left: 25vw;
-}
+    nav ul {
+        display: none !important
+    }
 
-.logoslist {
-    width: 20%;
-    margin-left: 40%;
-    display: flex;
-    justify-content: space-around;
+    nav {
+
+        justify-content: space-around;
+    }
 
 
-}
-
-.imageuploaded {
-    width: 100px;
-    height: auto;
 }
