--- a/src/app/Pages/Services/services.css
+++ b/src/app/Pages/Services/services.css
@@ -1,8 +1,5 @@
 @import url(../../variable.css);
 
-* {
-    font-family: f2 !important;
-}
 
 .secinservices {
     width: 90%;
@@ -10,6 +7,7 @@
     float: left;
     display: flex;
     height: auto;
+    margin-top: 120px;
     margin-bottom: 120px;
 
 }
@@ -21,7 +19,7 @@
     float: left;
     flex-wrap: wrap;
     direction: rtl;
-   align-items: center;
+    align-items: center;
 }
 
 .secinservices div h1 {
@@ -33,6 +31,23 @@
     float: left;
     height: auto !important;
 }
-.secinservices div iframe{
+
+.secinservices div iframe {
     border: none;
+}
+.a9efhw978fh65661651 .lf-player-container{
+    width: 100% !important;
+}
+@media only screen and (max-width: 1000px) {
+    .secinservices {
+   
+        flex-wrap: wrap;
+    }
+    .secinservices div{
+        width: 100%;
+    }
+
+    iframe {
+        display: none;
+    }
 }
