--- a/src/app/Pages/About/about.css
+++ b/src/app/Pages/About/about.css
@@ -1,6 +1,9 @@
 @import url("../../variable.css");
 
-* {
+
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@700&display=swap');
+
+*{
     margin: 0;
 }
 
@@ -94,7 +97,7 @@
         font-size: 2.8vw;
     }
 
-    
+
 }
 
 @media only screen and (max-width: 800px) {
@@ -142,6 +145,12 @@
 
     .sizethaasduhiu {
         font-size: 4.8vw;
+        font-family: 'Rubik', sans-serif;
     }
 
+}
+
+.sasdaef {
+
+    font-family: 'Rubik', sans-serif;
 }
